--- a/src/dorty.html
+++ b/src/dorty.html
@@ -10,7 +10,7 @@
 
 <a id="mandlovy-dort"><h2>Mandlový dort</h2></a>
 
-<p>Ustrouhej půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> sladkých loupaných a&nbsp;4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> hořkých mandli, dej je s&nbsp;půl librou tlučeného cukru do hrnce, dej k&nbsp;tomu dvanáct žloutků a&nbsp;z&nbsp;osmi bílků sníh, s&nbsp;půl citronu skrájenou kůru, lžičku strouhané, dobře prosáté žemličky, a&nbsp;celou hodinu to dobře míchej; pak vymaž formu rozpuštěným máslem, vysyp ji žemličkou, naplň ji napolo tím těstem a&nbsp;nech to hodinu znenáhla pect; pak dort vyklop, nech ho vychladnout, okrášli ho <a href="ledy-rozlicnych-barev.html#zluty-led">žlutým ledem</a> jakož i&nbsp;rozličnými cukrovinkami a&nbsp;nech ho osušit.</p>
+<p>Ustrouhej půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> sladkých loupaných a&nbsp;4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> hořkých mandli, dej je s&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">librou</a> tlučeného cukru do hrnce, dej k&nbsp;tomu dvanáct žloutků a&nbsp;z&nbsp;osmi bílků sníh, s&nbsp;půl citronu skrájenou kůru, lžičku strouhané, dobře prosáté žemličky, a&nbsp;celou hodinu to dobře míchej; pak vymaž formu rozpuštěným máslem, vysyp ji žemličkou, naplň ji napolo tím těstem a&nbsp;nech to hodinu znenáhla pect; pak dort vyklop, nech ho vychladnout, okrášli ho <a href="ledy-rozlicnych-barev.html#zluty-led">žlutým ledem</a> jakož i&nbsp;rozličnými cukrovinkami a&nbsp;nech ho osušit.</p>
 
 <a id="jiny-mandlovy-dort"><h2>Jiný mandlový dort</h2></a>
 
@@ -64,7 +64,7 @@
 
 <a id="dort-z-liskovych-orisku"><h2>Dort z&nbsp;lískových oříšků</h2></a>
 
-<p>Otři čistým šatem a&nbsp;ustrouhej čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> jader z&nbsp;lískových oříšků, dej je s&nbsp;půl librou tlučeného a&nbsp;prosátého cukru na mísu, přidej k&nbsp;tomu devět žloutků, ze dvou bílků tuhý sníh, a&nbsp;míchej tím celou hodinu, posléz k&nbsp;tomu přimíchej <a href="miry-a-vahy.html#lot" class="mav">lot</a> pěkné mouky, vymaž kulatou, nízkým okolkem opatřenou formu máslem, vysyp ji strouhanou prosátou žemličkou, vlej těsto do ni a&nbsp;nech dort zvolna upect; když prochladne, vyklop ho a&nbsp;nech jej docela vystydnout. Potom udělej ze třech bílků tuhý sníh, přimíchej k&nbsp;němu tři vrchovaté lžíce cukru, který jsi byla na kůře celého citronu ostrouhala, oblož tím dort, postav ho zase do trouby a&nbsp;nech ho při mírném ohni zčervenat, načež jej povrchu okrášli všelikým zavařeným ovocem.</p>
+<p>Otři čistým šatem a&nbsp;ustrouhej čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> jader z&nbsp;lískových oříšků, dej je s&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">librou</a> tlučeného a&nbsp;prosátého cukru na mísu, přidej k&nbsp;tomu devět žloutků, ze dvou bílků tuhý sníh, a&nbsp;míchej tím celou hodinu, posléz k&nbsp;tomu přimíchej <a href="miry-a-vahy.html#lot" class="mav">lot</a> pěkné mouky, vymaž kulatou, nízkým okolkem opatřenou formu máslem, vysyp ji strouhanou prosátou žemličkou, vlej těsto do ni a&nbsp;nech dort zvolna upect; když prochladne, vyklop ho a&nbsp;nech jej docela vystydnout. Potom udělej ze třech bílků tuhý sníh, přimíchej k&nbsp;němu tři vrchovaté lžíce cukru, který jsi byla na kůře celého citronu ostrouhala, oblož tím dort, postav ho zase do trouby a&nbsp;nech ho při mírném ohni zčervenat, načež jej povrchu okrášli všelikým zavařeným ovocem.</p>
 
 <a id="jiny-orechovy-dort"><h2>Jiný ořechový dort</h2></a>
 
