--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -62,7 +62,7 @@
 
 <a id="kompot-z-mrkve"><h2>Kompot z&nbsp;mrkve</h2></a>
 
-<p>Oškrab čistě několik šťavnatých mrkví, rozkrájej je na tenounké nudličky, dej je na rendlík se čtvrt librou cukru, na němžto jsi byla ostrouhala kůru s&nbsp;jednoho pomeranče, přilej k&nbsp;tomu asi půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> vody, naceď do toho šťávu z&nbsp;toho pomeranče, přikrej to a&nbsp;nech to do měkka dusit, musíš však bedlivě dohlížet, aby se to nepřipálilo; pak to nech vychladnout a&nbsp;dej to na stůl buď co samostatný kompot, anebo z&nbsp;toho udělej věnec buď okolo brusinek, neb okolo suchých vařených švestek aneb okolo jiného zavařeného ovoce.</p>
+<p>Oškrab čistě několik šťavnatých mrkví, rozkrájej je na tenounké nudličky, dej je na rendlík se čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> cukru, na němžto jsi byla ostrouhala kůru s&nbsp;jednoho pomeranče, přilej k&nbsp;tomu asi půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> vody, naceď do toho šťávu z&nbsp;toho pomeranče, přikrej to a&nbsp;nech to do měkka dusit, musíš však bedlivě dohlížet, aby se to nepřipálilo; pak to nech vychladnout a&nbsp;dej to na stůl buď co samostatný kompot, anebo z&nbsp;toho udělej věnec buď okolo brusinek, neb okolo suchých vařených švestek aneb okolo jiného zavařeného ovoce.</p>
 
 <a id="kompot-z-mrkve-a-pomerancu"><h2>Kompot z&nbsp;mrkve a&nbsp;pomerančů</h2></a>
 
@@ -82,5 +82,5 @@
 
 <a id="kompot-z-brusinek"><h2>Kompot z&nbsp;brusinek</h2></a>
 
-<p>Nech na rendlíčku zvařit půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> červeného vína se Čtvrt librou cukru, přidej k&nbsp;tomu kousek skořice a&nbsp;trochu citronové kůry, a&nbsp;když to začíná houstnout, dej do toho asi žejdlík zavařených brusinek, nech je jenom zpejchnout a&nbsp;vyndej je na misku; pak rozkrájej jeden nebo dva pomeranče na půlměsíčky, oblož nimi brusinky, posyp to ještě cukrem a&nbsp;dej to na stůl.</p>
+<p>Nech na rendlíčku zvařit půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> červeného vína se Čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> cukru, přidej k&nbsp;tomu kousek skořice a&nbsp;trochu citronové kůry, a&nbsp;když to začíná houstnout, dej do toho asi žejdlík zavařených brusinek, nech je jenom zpejchnout a&nbsp;vyndej je na misku; pak rozkrájej jeden nebo dva pomeranče na půlměsíčky, oblož nimi brusinky, posyp to ještě cukrem a&nbsp;dej to na stůl.</p>
 
