--- a/src/miry-a-vahy.html
+++ b/src/miry-a-vahy.html
@@ -10,4 +10,8 @@
 
 <a id="zejdlik"><h2>Žejdlík</h2></a>
 
-<p class="c">0,48 l</p>
+<p class="c">0,48 litru</p>
+
+<a id="kvintlik"><h2>Kvintlík</h2></a>
+
+<p class="c">4 gramy</p>
