--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -54,7 +54,7 @@
 
 <a id="tvarohove-slejsky"><h2>Tvarohové šlejšky</h2></a>
 
-<p>Utři kousek nového másla s&nbsp;půl librou dobrého tvarohu, dej do toho dvě lžičky kvasnic, trochu tlučeného cukru, hrstku malých, čistě přemytých hrozinek, vraz k&nbsp;tomu 3 žloutky a&nbsp;2 celé vejce, a&nbsp;dobře to promíchej; potom dej na vál asi dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> mouky a&nbsp;rozválej v&nbsp;ní dobře ten připravený tvaroh; nyní z&nbsp;toho dělej na prst dlouhé a&nbsp;na prst tlusté šlejšky, nech je trochu zkynout, a&nbsp;usmaž je hezky do zlatova v&nbsp;rozpáleném másle.</p>
+<p>Utři kousek nového másla s&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">librou</a> dobrého tvarohu, dej do toho dvě lžičky kvasnic, trochu tlučeného cukru, hrstku malých, čistě přemytých hrozinek, vraz k&nbsp;tomu 3 žloutky a&nbsp;2 celé vejce, a&nbsp;dobře to promíchej; potom dej na vál asi dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> mouky a&nbsp;rozválej v&nbsp;ní dobře ten připravený tvaroh; nyní z&nbsp;toho dělej na prst dlouhé a&nbsp;na prst tlusté šlejšky, nech je trochu zkynout, a&nbsp;usmaž je hezky do zlatova v&nbsp;rozpáleném másle.</p>
 
 <a id="tasky-s-tvarohem"><h2>Tašky s&nbsp;tvarohem</h2></a>
 
@@ -220,7 +220,7 @@
 
 <a id="lite-strudle-s-tvarohem"><h2>Lité štrudle s&nbsp;tvarohem</h2></a>
 
-<p>Udělají se na týž způsob jako předešlé, jen že se místo povidel nadějou tvarohem následovně připraveným: Utři půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> tvarohu se čtvrt librou másla a&nbsp;se šesti <a href="miry-a-vahy.html#lot" class="mav">loty</a> ustrouhaného parmazánského sýra, a&nbsp;vmíchej do toho čtyry žloutky; načež tím omeletky pomaž, zaviň a&nbsp;klad je vedle sebe na máslem hodně vymazaný kastrol nebo do formy, pomaž je hodně rozpuštěným máslem á nech je v&nbsp;troubě napolo upect, potom je ještě potři máslem, posyp strouhaným parmazánským sýrem a&nbsp;nech je dopect. Také se mohou nadívat <a href="#dobra-strudle-s-tvarohem">sladkým tvarohem</a>.</p>
+<p>Udělají se na týž způsob jako předešlé, jen že se místo povidel nadějou tvarohem následovně připraveným: Utři půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> tvarohu se čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> másla a&nbsp;se šesti <a href="miry-a-vahy.html#lot" class="mav">loty</a> ustrouhaného parmazánského sýra, a&nbsp;vmíchej do toho čtyry žloutky; načež tím omeletky pomaž, zaviň a&nbsp;klad je vedle sebe na máslem hodně vymazaný kastrol nebo do formy, pomaž je hodně rozpuštěným máslem á nech je v&nbsp;troubě napolo upect, potom je ještě potři máslem, posyp strouhaným parmazánským sýrem a&nbsp;nech je dopect. Také se mohou nadívat <a href="#dobra-strudle-s-tvarohem">sladkým tvarohem</a>.</p>
 
 <a id="lite-strudle-s-cokoladou"><h2>Lité štrudle s&nbsp;čokoládou</h2></a>
 
