--- a/src/raci-zaby-sneci-a-musle.html
+++ b/src/raci-zaby-sneci-a-musle.html
@@ -50,7 +50,7 @@
 
 <a id="musle-na-jiny-zpusob"><h2>Mušle na jiný způsob</h2></a>
 
-<p>Na padesát mušlí ustrouhej tři velké cibule, dej ji s&nbsp;půl librou másla na kastrol, rozdělej to po dně, přidej k&nbsp;tomu trochu usekané zelené petružele, trochu tlučeného květu, vlož na to dle předešlého udání očištěné mušle a&nbsp;nech je přikryté dusit; když se, začínají otvírat, rozloupni je opět jako předešle, urovnej je na mísu, ku šťávě přidej trochu vína, hodně to rozmíchej, a&nbsp;je-li omáčka příliš řídká, přidej trochu strouhané žemličky, pak to vlej na mušle a&nbsp;oblož je citronovými koláčky.</p>
+<p>Na padesát mušlí ustrouhej tři velké cibule, dej ji s&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">librou</a> másla na kastrol, rozdělej to po dně, přidej k&nbsp;tomu trochu usekané zelené petružele, trochu tlučeného květu, vlož na to dle předešlého udání očištěné mušle a&nbsp;nech je přikryté dusit; když se, začínají otvírat, rozloupni je opět jako předešle, urovnej je na mísu, ku šťávě přidej trochu vína, hodně to rozmíchej, a&nbsp;je-li omáčka příliš řídká, přidej trochu strouhané žemličky, pak to vlej na mušle a&nbsp;oblož je citronovými koláčky.</p>
 
 <a id="ustrice"><h2>Ústřice</h2></a>
 
