--- a/src/rozlicna-masla.html
+++ b/src/rozlicna-masla.html
@@ -2,7 +2,7 @@
 
 <a id="raci-maslo"><h2>Račí máslo</h2></a>
 
-<p>Uvař půl kopy třebas těch nejmenších raků, načež ocásky a&nbsp;klepýtka vyloupej, žluč i&nbsp;to houbovaté odstraň, to ostatní v&nbsp;moždíři na kaši utluč, dej to s&nbsp;půl librou čerstvého másla na rendlíček a&nbsp;nech to tak dlouho škvařit, až se na tom ukáže tmavočervená pěna, pak to vlej do starého čistého, ve studené vodě omočeného a&nbsp;vyždímaného ubrousku, a&nbsp;mezi dvěma vařečkama všecko máslo protlač a&nbsp;nech ustydnout. – Toto máslo nechá se i&nbsp;při největší opatrnosti jenom několik dní udržet; také se jen v&nbsp;měsících, kdy právě raci jsou, totiž od května až do srpna, jídla s&nbsp;račím máslem, kterým ouhlednosti i&nbsp;chuti velmi nabudou, připravovat mohou.</p>
+<p>Uvař půl kopy třebas těch nejmenších raků, načež ocásky a&nbsp;klepýtka vyloupej, žluč i&nbsp;to houbovaté odstraň, to ostatní v&nbsp;moždíři na kaši utluč, dej to s&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">librou</a> čerstvého másla na rendlíček a&nbsp;nech to tak dlouho škvařit, až se na tom ukáže tmavočervená pěna, pak to vlej do starého čistého, ve studené vodě omočeného a&nbsp;vyždímaného ubrousku, a&nbsp;mezi dvěma vařečkama všecko máslo protlač a&nbsp;nech ustydnout. – Toto máslo nechá se i&nbsp;při největší opatrnosti jenom několik dní udržet; také se jen v&nbsp;měsících, kdy právě raci jsou, totiž od května až do srpna, jídla s&nbsp;račím máslem, kterým ouhlednosti i&nbsp;chuti velmi nabudou, připravovat mohou.</p>
 
 <a id="maslo-zlate"><h2>Máslo zlaté</h2></a>
 
