--- a/src/zmrzliny.html
+++ b/src/zmrzliny.html
@@ -10,11 +10,11 @@
 
 <a id="zmrzlina-z-vanilie"><h2>Zmrzlina z&nbsp;vanilie</h2></a>
 
-<p>Nech vařit žejdlík dobré smetany se čtvrt librou cukru a&nbsp;jedním kvintlíkem na malé kousky nakrájené vanilie, pak rozkloktej šest žloutků s&nbsp;trochou studené smetany, vlej to do vařící smetany a&nbsp;míchej tím, až to zhoustne, potom to proceď skrze žíněné sejtko do nějaké nádoby, a&nbsp;míchej tím, až to hodně vychladne, načež to vlej do pyksly a&nbsp;nech to mezi ustavičným mícháním zmrznout.</p>
+<p>Nech vařit žejdlík dobré smetany se čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> cukru a&nbsp;jedním <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlíkem</a> na malé kousky nakrájené vanilie, pak rozkloktej šest žloutků s&nbsp;trochou studené smetany, vlej to do vařící smetany a&nbsp;míchej tím, až to zhoustne, potom to proceď skrze žíněné sejtko do nějaké nádoby, a&nbsp;míchej tím, až to hodně vychladne, načež to vlej do pyksly a&nbsp;nech to mezi ustavičným mícháním zmrznout.</p>
 
 <a id="zmrzlina-z-caje"><h2>Zmrzlina z&nbsp;čaje</h2></a>
 
-<p>Na <a href="miry-a-vahy.html#lot" class="mav">lot</a> císařského čaje nalej dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vařící smetany a&nbsp;nech to čtvrt hodiny přikryté stát, pak to proceď. V&nbsp;jiném hrnku umíchej dvanáct žloutků s&nbsp;půl librou tlučeného cukru, až se to zpění, potom k&nbsp;tomu přilej tu čajovou smetanu a&nbsp;kloktej tím nad mírným ohněm, až to zhoustne; vařit se to ale nesmí; pak to proceď skrze sejtko do čisté nádoby, a&nbsp;míchej tím, až to úplně vystydne, načež to vlej do pyksly a&nbsp;dělej dle předpisu zmrzlinu.</p>
+<p>Na <a href="miry-a-vahy.html#lot" class="mav">lot</a> císařského čaje nalej dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vařící smetany a&nbsp;nech to čtvrt hodiny přikryté stát, pak to proceď. V&nbsp;jiném hrnku umíchej dvanáct žloutků s&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">librou</a> tlučeného cukru, až se to zpění, potom k&nbsp;tomu přilej tu čajovou smetanu a&nbsp;kloktej tím nad mírným ohněm, až to zhoustne; vařit se to ale nesmí; pak to proceď skrze sejtko do čisté nádoby, a&nbsp;míchej tím, až to úplně vystydne, načež to vlej do pyksly a&nbsp;dělej dle předpisu zmrzlinu.</p>
 
 <a id="zmrzlina-z-kavy"><h2>Zmrzlina z&nbsp;kávy</h2></a>
 
@@ -28,7 +28,7 @@
 
 <a id="zmrzlina-z-horkych-mandli"><h2>Zmrzlina z&nbsp;hořkých mandli</h2></a>
 
-<p>Opař a&nbsp;oloupej čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> kořkých a&nbsp;dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> sladkých mandlí a&nbsp;utluč je na kasičku. Rozmíchej dvanáct žloutků s&nbsp;půl librou tlučeného cukru, přidej k&nbsp;tomu tu kasičku z&nbsp;mandlí, kousek vanilky, nalej na to dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vlažné smetany, postav to na mírný oheň a&nbsp;kloktej tím stále, až to začne houstnout, pak to odstav a&nbsp;míchej tím, až to úplně vystydne, načež to proceď skrze sejtko, vlej to do pyksly a&nbsp;dělej zmrzlinu na svrchu udaný způsob.</p>
+<p>Opař a&nbsp;oloupej čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> kořkých a&nbsp;dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> sladkých mandlí a&nbsp;utluč je na kasičku. Rozmíchej dvanáct žloutků s&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">librou</a> tlučeného cukru, přidej k&nbsp;tomu tu kasičku z&nbsp;mandlí, kousek vanilky, nalej na to dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vlažné smetany, postav to na mírný oheň a&nbsp;kloktej tím stále, až to začne houstnout, pak to odstav a&nbsp;míchej tím, až to úplně vystydne, načež to proceď skrze sejtko, vlej to do pyksly a&nbsp;dělej zmrzlinu na svrchu udaný způsob.</p>
 
 <a id="zmrzlina-z-kastanu"><h2>Zmrzlina z&nbsp;kaštanů</h2></a>
 
@@ -36,11 +36,11 @@
 
 <a id="zmrzlina-cokoladova"><h2>Zmrzlina čokoládová</h2></a>
 
-<p>Nech zvařit dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> dobré smetany, dej do ní šest tabulek strouhané čokolády, osm <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru, Čtvrt kvintlíku vanilie, a&nbsp;nech to při ustavičném míchání povařit; pak rozkloktej osm žloutků asi se třemi lžičkami studené smetany, vlej na to tu vařící čokoládu a&nbsp;kloktej tím, až to vystydne, načež to proceď skrze husté žíněné sejtko, vlej to do pyksly a&nbsp;dělej zmrzlinu.</p>
+<p>Nech zvařit dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> dobré smetany, dej do ní šest tabulek strouhané čokolády, osm <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru, Čtvrt <a href="miry-a-vahy.html#kvintlik" class="mav">kvintlíku</a> vanilie, a&nbsp;nech to při ustavičném míchání povařit; pak rozkloktej osm žloutků asi se třemi lžičkami studené smetany, vlej na to tu vařící čokoládu a&nbsp;kloktej tím, až to vystydne, načež to proceď skrze husté žíněné sejtko, vlej to do pyksly a&nbsp;dělej zmrzlinu.</p>
 
 <a id="zmrzlina-z-paleneho-cukru"><h2>Zmrzlina z&nbsp;páleného cukru</h2></a>
 
-<p>Nech na rendlíčku čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody do hnědá, totiž až k&nbsp;sedmému stupni uvařit, potom k&nbsp;němu zčerstva přilej půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> vody a&nbsp;míchej tím, až to zhoustne. Rozmíchej v&nbsp;hrnku dvanáct žloutků se čtvrt librou cukru, nalej na to dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> smetany, postav to na oheň a&nbsp;kloktej tím stále, až to začne houstnout, pak to odstav, přidej k&nbsp;tomu ten pálený cukr a&nbsp;míchej tím opět, až to vystydne; načež to proceď jako předešlé, vlej to do pyksly a&nbsp;dělej zmrzlinu.</p>
+<p>Nech na rendlíčku čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody do hnědá, totiž až k&nbsp;sedmému stupni uvařit, potom k&nbsp;němu zčerstva přilej půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> vody a&nbsp;míchej tím, až to zhoustne. Rozmíchej v&nbsp;hrnku dvanáct žloutků se čtvrt <a href="miry-a-vahy.html#libra" class="mav">librou</a> cukru, nalej na to dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> smetany, postav to na oheň a&nbsp;kloktej tím stále, až to začne houstnout, pak to odstav, přidej k&nbsp;tomu ten pálený cukr a&nbsp;míchej tím opět, až to vystydne; načež to proceď jako předešlé, vlej to do pyksly a&nbsp;dělej zmrzlinu.</p>
 
 <a id="zmrzlina-z-jahod"><h2>Zmrzlina z&nbsp;jahod</h2></a>
 
@@ -80,5 +80,5 @@
 
 <a id="zmrzlina-s-maraskynem"><h2>Zmrzlina s&nbsp;maraskýnem</h2></a>
 
-<p>Umíchej v&nbsp;hrnku 10 žloutků s&nbsp;půl librou tlučeného cukru, nalej na to dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> smetany a&nbsp;dobře to rozkloktej, potom to postav na oheň a&nbsp;kloktej tím stále, až se to začne zvedat a&nbsp;houstnout, pak to odstav a&nbsp;míchej tím, až to vychladne; načež k&nbsp;tomu přimíchej tolik maraskýnového likéru, jak to dle vlastní chuti silné nebo lahodné míti chceš, ještě to hodně promíchej, až to docela vystydne, pak to vlej do pyksly a&nbsp;dělej zmrzlinu. – Místo maraskýnu můžeš dáti jakýkoli jiný likér, pak se zmrzlina dle toho nazývá. Toto uvádí se pro uspoření stálého opakování.</p>
+<p>Umíchej v&nbsp;hrnku 10 žloutků s&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">librou</a> tlučeného cukru, nalej na to dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> smetany a&nbsp;dobře to rozkloktej, potom to postav na oheň a&nbsp;kloktej tím stále, až se to začne zvedat a&nbsp;houstnout, pak to odstav a&nbsp;míchej tím, až to vychladne; načež k&nbsp;tomu přimíchej tolik maraskýnového likéru, jak to dle vlastní chuti silné nebo lahodné míti chceš, ještě to hodně promíchej, až to docela vystydne, pak to vlej do pyksly a&nbsp;dělej zmrzlinu. – Místo maraskýnu můžeš dáti jakýkoli jiný likér, pak se zmrzlina dle toho nazývá. Toto uvádí se pro uspoření stálého opakování.</p>
 
