--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -22,7 +22,7 @@
 
 <a id="merunkove-preclicky"><h2>Meruňkové preclíčky</h2></a>
 
-<p>Vezmi na vál 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného prosátého cukru, dej do něho lžíci meruňkové zavařeninky, lžíci citronové šťávy, a&nbsp;zadělej těsto; kdyby bylo řídké, musíš ještě přidat tlučeného prosátého cukru tolik, aby se nelíplo na ruce; pak dělej z&nbsp;něho malinké preclíčky, polož. je na papír a&nbsp;nech je v&nbsp;letě jenom na povětří, v&nbsp;zimě pak na teplém místě uschnout, až se od papíru oddělí, potom je ulož v&nbsp;suchém místě. Mohou se dát mezi cukrovinky. – Ž téhož těstíčka mohou se také dělat na stéblo tlusté malé celtličky, a&nbsp;když uschnou, zavinou se do pěkných papírků jako jiné celtle a&nbsp;smíchají se mezi cukrovinky.</p>
+<p>Vezmi na vál 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného prosátého cukru, dej do něho lžíci meruňkové zavařeninky, lžíci citronové šťávy, a&nbsp;zadělej těsto; kdyby bylo řídké, musíš ještě přidat tlučeného prosátého cukru tolik, aby se nelíplo na ruce; pak dělej z&nbsp;něho malinké preclíčky, polož. je na papír a&nbsp;nech je v&nbsp;letě jenom na povětří, v&nbsp;zimě pak na teplém místě uschnout, až se od papíru oddělí, potom je ulož v&nbsp;suchém místě. Mohou se dát mezi cukrovinky. Ž téhož těstíčka mohou se také dělat na stéblo tlusté malé celtličky, a&nbsp;když uschnou, zavinou se do pěkných papírků jako jiné celtle a&nbsp;smíchají se mezi cukrovinky.</p>
 
 <a id="ledove-koblizky"><h2>Ledové kobližky</h2></a>
 
