--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -2,7 +2,7 @@
 
 <a id="kompot-z-cerstvych-visni"><h2>Kompot z&nbsp;čerstvých višní</h2></a>
 
-<p>Nech na rendlíku v&nbsp;půl žejdlíku vody vařit čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;kouskem skořice, pak do toho vlož asi dva-žejdlíky omytých višni a&nbsp;nech je přikryté zvolna trochu povařit, potom je vyndej na misku, šťávu nech ještě povařit a&nbsp;pak ji vlej na višně. – Třešňový* kompot připravuje se na týž způsob, jen že se dá o&nbsp;polovic méně cukru.</p>
+<p>Nech na rendlíku v&nbsp;půl žejdlíku vody vařit čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;kouskem skořice, pak do toho vlož asi dva-žejdlíky omytých višni a&nbsp;nech je přikryté zvolna trochu povařit, potom je vyndej na misku, šťávu nech ještě povařit a&nbsp;pak ji vlej na višně. Třešňový kompot připravuje se na týž způsob, jen že se dá o&nbsp;polovic méně cukru.</p>
 
 <a id="kompot-z-jahod"><h2>Kompot z&nbsp;jahod</h2></a>
 
