--- a/src/nalozeniny-k-hovezimu-masu.html
+++ b/src/nalozeniny-k-hovezimu-masu.html
@@ -14,7 +14,7 @@
 
 <a id="okurky-oloupane"><h2>Okurky oloupané</h2></a>
 
-<p>Oloupej velké zdravé okurky, rozkroj každou v&nbsp;půli a&nbsp;vyškrab z&nbsp;nich všecky jádra, pak okurky rozkrájej po délce na kousky a&nbsp;dej je na misku; zvař vinni ocet se solí, vlej ho vařící na okurky a&nbsp;nech je vněm do druhého dne; druhý den slej svrchu jenom ten čistý ocet, přidej do něho ještě čerstvého octa, trochu soli, dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> pepře, půl lotu nového koření, několik bobkových listů, několik pepřik, a&nbsp;nech všecko zvařit, pak vychladnout; zatím okurky urovnej do kamenného hrnku, pak na ně nalej ten zvařený vychladlý ocet se všemi přísadami, hrnek obvaz měchýřem a&nbsp;postav ho do chladného místa. – Také se mohou tyto oloupané okurky jako předešlé do sklenic dát a&nbsp;v&nbsp;páře vařit.</p>
+<p>Oloupej velké zdravé okurky, rozkroj každou v&nbsp;půli a&nbsp;vyškrab z&nbsp;nich všecky jádra, pak okurky rozkrájej po délce na kousky a&nbsp;dej je na misku; zvař vinni ocet se solí, vlej ho vařící na okurky a&nbsp;nech je vněm do druhého dne; druhý den slej svrchu jenom ten čistý ocet, přidej do něho ještě čerstvého octa, trochu soli, dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> pepře, půl lotu nového koření, několik bobkových listů, několik pepřik, a&nbsp;nech všecko zvařit, pak vychladnout; zatím okurky urovnej do kamenného hrnku, pak na ně nalej ten zvařený vychladlý ocet se všemi přísadami, hrnek obvaz měchýřem a&nbsp;postav ho do chladného místa. Také se mohou tyto oloupané okurky jako předešlé do sklenic dát a&nbsp;v&nbsp;páře vařit.</p>
 
 <a id="nalozene-ryzce"><h2>Naložené ryzce</h2></a>
 
@@ -26,7 +26,7 @@
 
 <a id="nalozene-hribky"><h2>Naložené hříbky</h2></a>
 
-<p>Vyber samé malinké hříbky, kořínky ulom, hlavičky vyper a&nbsp;dej je do hrnku se solí, octem a&nbsp;celým pepřem vařit, pak je odstav a&nbsp;nech je do druhého dne; druhý den vyndej houby lžičkou do parních sklenic, zvař opět čerstvý ocet se solí, bobkovým listím a&nbsp;pepřem, nalej ho na houby a&nbsp;dále pokračuj tak jak v&nbsp;předešlém předpisu udáno. – Tak se také žampiony nakládají.</p>
+<p>Vyber samé malinké hříbky, kořínky ulom, hlavičky vyper a&nbsp;dej je do hrnku se solí, octem a&nbsp;celým pepřem vařit, pak je odstav a&nbsp;nech je do druhého dne; druhý den vyndej houby lžičkou do parních sklenic, zvař opět čerstvý ocet se solí, bobkovým listím a&nbsp;pepřem, nalej ho na houby a&nbsp;dále pokračuj tak jak v&nbsp;předešlém předpisu udáno. Tak se také žampiony nakládají.</p>
 
 <a id="nalozene-bobove-lusky"><h2>Naložené bobové lusky</h2></a>
 
@@ -34,11 +34,11 @@
 
 <a id="nalozena-cervena-repa"><h2>Naložená červená řepa</h2></a>
 
-<p>Červená řepa se čistě omeje, do měkka uvaří, pak se oloupá, rozkrájí na koláčky a&nbsp;takto se naloží: Oškrab křen a&nbsp;rozkrájej ho na koláčky, potom vlož do hrnku vrstvu řepy, oblož ji několika koláčky křenu, posyp trochu anýzem nebo feniklem a&nbsp;trochu solí, na to dej opět vrstvu řepy, pak zase to ostatní, a&nbsp;tak pokračuj, až jest všecko naloženo, potom na to nalej dobrý vinni ocet – a&nbsp;ve čtyryadvaceti hodinách jest řepa k&nbsp;potřebě.</p>
+<p>Červená řepa se čistě omeje, do měkka uvaří, pak se oloupá, rozkrájí na koláčky a&nbsp;takto se naloží: Oškrab křen a&nbsp;rozkrájej ho na koláčky, potom vlož do hrnku vrstvu řepy, oblož ji několika koláčky křenu, posyp trochu anýzem nebo feniklem a&nbsp;trochu solí, na to dej opět vrstvu řepy, pak zase to ostatní, a&nbsp;tak pokračuj, až jest všecko naloženo, potom na to nalej dobrý vinni ocet a&nbsp;ve čtyryadvaceti hodinách jest řepa k&nbsp;potřebě.</p>
 
 <a id="nalozene-brusinky"><h2>Naložené brusinky</h2></a>
 
-<p>Přeber a&nbsp;vyper zralé brusinky, dej je na rendlík, nalej na ně čtvrt <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> vody a&nbsp;též tolik vinného octa, přidej k&nbsp;tomu čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru a&nbsp;nech to vařit; když se brusinky již hezky povařily, vyndej je do hrnku, je-li příliš mnoho šťávy, slej ji a&nbsp;nech ji ještě trochu do hustá svařit, pak ji nalej na brusinky, hrnek obvaz silným papírem a&nbsp;postav ho do chladného místa. – Také se mohou brusinky bez octa a&nbsp;vody, pouze ve vlastni šťávě zvařit a&nbsp;uschovat; když pak se v&nbsp;zimě maji dát k&nbsp;nějaké pečeni, tedy se na ně naleje trochu rakouského vína a&nbsp;posypou se hodně cukrem.</p>
+<p>Přeber a&nbsp;vyper zralé brusinky, dej je na rendlík, nalej na ně čtvrt <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> vody a&nbsp;též tolik vinného octa, přidej k&nbsp;tomu čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru a&nbsp;nech to vařit; když se brusinky již hezky povařily, vyndej je do hrnku, je-li příliš mnoho šťávy, slej ji a&nbsp;nech ji ještě trochu do hustá svařit, pak ji nalej na brusinky, hrnek obvaz silným papírem a&nbsp;postav ho do chladného místa. Také se mohou brusinky bez octa a&nbsp;vody, pouze ve vlastni šťávě zvařit a&nbsp;uschovat; když pak se v&nbsp;zimě maji dát k&nbsp;nějaké pečeni, tedy se na ně naleje trochu rakouského vína a&nbsp;posypou se hodně cukrem.</p>
 
 <a id="nalozena-michaninka"><h2>Naložená míchaninka</h2></a>
 
