--- a/src/napoje.html
+++ b/src/napoje.html
@@ -2,7 +2,7 @@
 
 <a id="citronova-voda"><h2>Citronová voda</h2></a>
 
-<p>Na žejdlík vody ostrouhej na cukru kůru s&nbsp;půl citronu, vytlač k&nbsp;tomu z&nbsp;půl citronu šťávu, zamíchej do toho asi půl druhého nebo dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru – a&nbsp;máš chutný, občerstvující nápoj pro zdravé i&nbsp;nemocné. Chceš-li míti teplou limonádu, tedy dej místo studené vody vařící. – Máš-li zapotřebí mnoho limonády, tedy vymačkej tolik citronů, aby bylo šťávy půl žejdlíka, na citronové kůře ostrouhej půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru, potom dej šťávu i&nbsp;cukr na mosazný kotlíček a&nbsp;nech přes to přejít jen jeden var, pak to proceď skrze čistý šat a&nbsp;nech to vychladnout; Lžička této šťávy stačí do sklenice vody.</p>
+<p>Na žejdlík vody ostrouhej na cukru kůru s&nbsp;půl citronu, vytlač k&nbsp;tomu z&nbsp;půl citronu šťávu, zamíchej do toho asi půl druhého nebo dva <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru – a&nbsp;máš chutný, občerstvující nápoj pro zdravé i&nbsp;nemocné. Chceš-li míti teplou limonádu, tedy dej místo studené vody vařící. Máš-li zapotřebí mnoho limonády, tedy vymačkej tolik citronů, aby bylo šťávy půl žejdlíka, na citronové kůře ostrouhej půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru, potom dej šťávu i&nbsp;cukr na mosazný kotlíček a&nbsp;nech přes to přejít jen jeden var, pak to proceď skrze čistý šat a&nbsp;nech to vychladnout; Lžička této šťávy stačí do sklenice vody.</p>
 
 <a id="mandlove-mleko"><h2>Mandlové mléko</h2></a>
 
@@ -38,7 +38,7 @@
 
 <a id="cokolada"><h2>Čokoláda</h2></a>
 
-<p>Na žejdlík dobré smetany ustrouhají se 3 tabulky dobré čokolády, a&nbsp;když se smetana vaří, vleje se na čokoládu, a&nbsp;mezi ustavičným mícháním sbírá se lžičkou pěna a&nbsp;dává se do koflíků. Když jsou koflíky pěnou přeplněny, tedy se nahoře žhavým uhlím připálí, ostatní čokoláda se zakloktá studenou, žloutkem rozmíchanou smetanou, naleje se do konvičky a&nbsp;dá se na stůl k&nbsp;pěně za podlívku. Na žejdlík čokolády vezme se jeden žloutek. – Této pěny může se též použit místo šodó do smažených košíčků, jakož i&nbsp;na vařené buchty a&nbsp;rozličné smaženinky.</p>
+<p>Na žejdlík dobré smetany ustrouhají se 3 tabulky dobré čokolády, a&nbsp;když se smetana vaří, vleje se na čokoládu, a&nbsp;mezi ustavičným mícháním sbírá se lžičkou pěna a&nbsp;dává se do koflíků. Když jsou koflíky pěnou přeplněny, tedy se nahoře žhavým uhlím připálí, ostatní čokoláda se zakloktá studenou, žloutkem rozmíchanou smetanou, naleje se do konvičky a&nbsp;dá se na stůl k&nbsp;pěně za podlívku. Na žejdlík čokolády vezme se jeden žloutek. Této pěny může se též použit místo šodó do smažených košíčků, jakož i&nbsp;na vařené buchty a&nbsp;rozličné smaženinky.</p>
 
 <a id="cokolada-z-vody"><h2>Čokoláda z&nbsp;vody</h2></a>
 
@@ -62,7 +62,7 @@
 
 <a id="sodo"><h2>Šodó</h2></a>
 
-<p>Do pětižejdlíkového hrnku vraz 12 žloutků, dej k&nbsp;nim čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, s&nbsp;půl citronu nerozkrájenou kůru, žejdlík dobrého rakouského vina, a&nbsp;hned za studena to hezky rozkloktej; pak oblož kolem hrnku hodně uhlí, nebo to postav na rozpálenou plotnu a&nbsp;pořád tím kloktej, až se to pění a&nbsp;ve vaření zhoustne, načež to honem nalej do koflíků a&nbsp;dej to na stůl. – Šodó se může též k&nbsp;rozličným jídlům potřebovat, jako ke košíčkům, vařeným buchtám (puding), smaženým štrudlím a&nbsp;t. p.</p>
+<p>Do pětižejdlíkového hrnku vraz 12 žloutků, dej k&nbsp;nim čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, s&nbsp;půl citronu nerozkrájenou kůru, žejdlík dobrého rakouského vina, a&nbsp;hned za studena to hezky rozkloktej; pak oblož kolem hrnku hodně uhlí, nebo to postav na rozpálenou plotnu a&nbsp;pořád tím kloktej, až se to pění a&nbsp;ve vaření zhoustne, načež to honem nalej do koflíků a&nbsp;dej to na stůl. Šodó se může též k&nbsp;rozličným jídlům potřebovat, jako ke košíčkům, vařeným buchtám (puding), smaženým štrudlím a&nbsp;t. p.</p>
 
 <a id="sodo-ze-slivovice"><h2>Šodó ze slivovice</h2></a>
 
@@ -80,7 +80,7 @@
 
 <a id="malinova-slava"><h2>Malinová sláva</h2></a>
 
-<p>Zralé maliny se v&nbsp;hrnku rozmačkají, talířem přikrejou a&nbsp;nechají se ve studeném místě dva dni stát; potom se vymačkají, procedí skrze plátěný šat a&nbsp;nechají se přikryté v&nbsp;kuchyni dva dni stát. Ta pěna, co z&nbsp;nich vykyše, se povrchu lžicí sebere; pak se čistý hrnek pováže řídkým plátěným šatem, ta malinová šťáva se ještě jednou na šat naleje a&nbsp;nechá se bez mačkáni do hrnku protéct, aby byla docela čistá. Nyní se šťáva odměří; kolik jest jí žejdlíků, tolik <a href="miry-a-vahy.html#libra" class="mav">liber</a> cukru nechá se rozpustit, a&nbsp;když jest rozpuštěn, dá se šťáva do něho a&nbsp;mezi varem se ustavičně míchá, přičemž se pěna povrchu tak dlouho sbírá, až se přestane pěnit, načež se odstaví; nesmí se ale dlouho vařit, aby neztratila barvu a&nbsp;chuť, a&nbsp;musí zůstati docela řídká. Když šťáva docela vychladne, vleje se do láhve a&nbsp;uschová se do studeného místa. – Lžíce této šťávy, s&nbsp;vodou smíšená, poskytuje velmi občerstvující nápoj.</p>
+<p>Zralé maliny se v&nbsp;hrnku rozmačkají, talířem přikrejou a&nbsp;nechají se ve studeném místě dva dni stát; potom se vymačkají, procedí skrze plátěný šat a&nbsp;nechají se přikryté v&nbsp;kuchyni dva dni stát. Ta pěna, co z&nbsp;nich vykyše, se povrchu lžicí sebere; pak se čistý hrnek pováže řídkým plátěným šatem, ta malinová šťáva se ještě jednou na šat naleje a&nbsp;nechá se bez mačkáni do hrnku protéct, aby byla docela čistá. Nyní se šťáva odměří; kolik jest jí žejdlíků, tolik <a href="miry-a-vahy.html#libra" class="mav">liber</a> cukru nechá se rozpustit, a&nbsp;když jest rozpuštěn, dá se šťáva do něho a&nbsp;mezi varem se ustavičně míchá, přičemž se pěna povrchu tak dlouho sbírá, až se přestane pěnit, načež se odstaví; nesmí se ale dlouho vařit, aby neztratila barvu a&nbsp;chuť, a&nbsp;musí zůstati docela řídká. Když šťáva docela vychladne, vleje se do láhve a&nbsp;uschová se do studeného místa. Lžíce této šťávy, s&nbsp;vodou smíšená, poskytuje velmi občerstvující nápoj.</p>
 
 <p>Na tentýž způsob připravuje se také rybízová šťáva.</p>
 
