--- a/src/ovocni-zavareninky.html
+++ b/src/ovocni-zavareninky.html
@@ -12,7 +12,7 @@
 
 <a id="rybizova-stava-za-studena-pripravena"><h2>Rybízová šťáva za studena připravená</h2></a>
 
-<p>Ober pěkné zralé rybízové zrnka a&nbsp;proceď je. Na žejdlík šťávy utluč co nejjemněji <a href="miry-a-vahy.html#libra" class="mav">libru</a> nejpěknějšího cukru, pak ho dej se šťávou na porcelánovou misku a&nbsp;míchej tím novou malou vařečkou stále k&nbsp;jedné straně tři hodiny bez přestání, potom tím naplň malé skleněné nádobky, obvaz je papírem a&nbsp;uschovej. – Tato šťáva se může v&nbsp;létě nalejt do formy rosolové, a&nbsp;když ustydne, vyklopí se jako rosol a&nbsp;podá se pro občerstvení.</p>
+<p>Ober pěkné zralé rybízové zrnka a&nbsp;proceď je. Na žejdlík šťávy utluč co nejjemněji <a href="miry-a-vahy.html#libra" class="mav">libru</a> nejpěknějšího cukru, pak ho dej se šťávou na porcelánovou misku a&nbsp;míchej tím novou malou vařečkou stále k&nbsp;jedné straně tři hodiny bez přestání, potom tím naplň malé skleněné nádobky, obvaz je papírem a&nbsp;uschovej. Tato šťáva se může v&nbsp;létě nalejt do formy rosolové, a&nbsp;když ustydne, vyklopí se jako rosol a&nbsp;podá se pro občerstvení.</p>
 
 <a id="malinova-zavareninka"><h2>Malinová zavařeninka</h2></a>
 
@@ -80,7 +80,7 @@
 
 <a id="boruvky-zavarene"><h2>Borůvky zavařené</h2></a>
 
-<p>V krajinách, kde se rodí hojnost borůvek, možno si jich pro zimu následujícím levným způsobem připravit: Kamenné láhve po minerální vodě naplň borůvkami, přidej do každé láhve tři lžíce tlučeného cukru, obvaz je hodně pevně namočeným hovězím měchýřem anebo klihovým papírem, postav je do velkého, vařící vodou naplněného hrnku a&nbsp;nech to tři hodiny takto v&nbsp;páře vařit; potom láhve i&nbsp;s&nbsp;vodou odstav od ohně, nech je vystydnout, načež je vyndej a&nbsp;uschovej. – Takto zavařené borůvky, natřené na chlebě nebo na vdolečkách, poskytnou v&nbsp;zimě, zvláště dítkám milou lahůdku. Když jich chceš upotřebit, musíš sekyrkou nebo velkým nožem svrchek láhve urazit.</p>
+<p>V krajinách, kde se rodí hojnost borůvek, možno si jich pro zimu následujícím levným způsobem připravit: Kamenné láhve po minerální vodě naplň borůvkami, přidej do každé láhve tři lžíce tlučeného cukru, obvaz je hodně pevně namočeným hovězím měchýřem anebo klihovým papírem, postav je do velkého, vařící vodou naplněného hrnku a&nbsp;nech to tři hodiny takto v&nbsp;páře vařit; potom láhve i&nbsp;s&nbsp;vodou odstav od ohně, nech je vystydnout, načež je vyndej a&nbsp;uschovej. Takto zavařené borůvky, natřené na chlebě nebo na vdolečkách, poskytnou v&nbsp;zimě, zvláště dítkám milou lahůdku. Když jich chceš upotřebit, musíš sekyrkou nebo velkým nožem svrchek láhve urazit.</p>
 
 <a id="visnovka"><h2>Višňovka</h2></a>
 
