--- a/src/rozlicna-masla.html
+++ b/src/rozlicna-masla.html
@@ -2,11 +2,11 @@
 
 <a id="raci-maslo"><h2>Račí máslo</h2></a>
 
-<p>Uvař půl kopy třebas těch nejmenších raků, načež ocásky a&nbsp;klepýtka vyloupej, žluč i&nbsp;to houbovaté odstraň, to ostatní v&nbsp;moždíři na kaši utluč, dej to s&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">librou</a> čerstvého másla na rendlíček a&nbsp;nech to tak dlouho škvařit, až se na tom ukáže tmavočervená pěna, pak to vlej do starého čistého, ve studené vodě omočeného a&nbsp;vyždímaného ubrousku, a&nbsp;mezi dvěma vařečkama všecko máslo protlač a&nbsp;nech ustydnout. – Toto máslo nechá se i&nbsp;při největší opatrnosti jenom několik dní udržet; také se jen v&nbsp;měsících, kdy právě raci jsou, totiž od května až do srpna, jídla s&nbsp;račím máslem, kterým ouhlednosti i&nbsp;chuti velmi nabudou, připravovat mohou.</p>
+<p>Uvař půl kopy třebas těch nejmenších raků, načež ocásky a&nbsp;klepýtka vyloupej, žluč i&nbsp;to houbovaté odstraň, to ostatní v&nbsp;moždíři na kaši utluč, dej to s&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">librou</a> čerstvého másla na rendlíček a&nbsp;nech to tak dlouho škvařit, až se na tom ukáže tmavočervená pěna, pak to vlej do starého čistého, ve studené vodě omočeného a&nbsp;vyždímaného ubrousku, a&nbsp;mezi dvěma vařečkama všecko máslo protlač a&nbsp;nech ustydnout. Toto máslo nechá se i&nbsp;při největší opatrnosti jenom několik dní udržet; také se jen v&nbsp;měsících, kdy právě raci jsou, totiž od května až do srpna, jídla s&nbsp;račím máslem, kterým ouhlednosti i&nbsp;chuti velmi nabudou, připravovat mohou.</p>
 
 <a id="maslo-zlate"><h2>Máslo zlaté</h2></a>
 
-<p>Nech ve smetaně rozpustit trochu šafránu a&nbsp;proceď to; potom utři čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvě tlučeného másla asi se čtyřmi tvrdými, hezky žlutými žloutky, a&nbsp;přimíchej k&nbsp;tomu té šafránové smetany; aby se máslo stalo ještě líbeznějším, můžeš k&nbsp;němu přimíchat s&nbsp;půl citronu šťávy, načež ho dej do studeného místa. – Toto máslo se hodí k&nbsp;okrašlování mis se studenými jídly, jako šunek, uzených jazyků a&nbsp;masitých rosolů.</p>
+<p>Nech ve smetaně rozpustit trochu šafránu a&nbsp;proceď to; potom utři čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvě tlučeného másla asi se čtyřmi tvrdými, hezky žlutými žloutky, a&nbsp;přimíchej k&nbsp;tomu té šafránové smetany; aby se máslo stalo ještě líbeznějším, můžeš k&nbsp;němu přimíchat s&nbsp;půl citronu šťávy, načež ho dej do studeného místa. Toto máslo se hodí k&nbsp;okrašlování mis se studenými jídly, jako šunek, uzených jazyků a&nbsp;masitých rosolů.</p>
 
 <a id="maslo-zelene"><h2>Máslo zelené</h2></a>
 
@@ -14,15 +14,15 @@
 
 <a id="maslo-ruzove"><h2>Máslo růžové</h2></a>
 
-<p>Utři másla mnoho-li potřebuješ s&nbsp;tolika kapkami alkermesové šťávy, až je barvy krásně růžové. – Toto máslo hodí se pouze k&nbsp;okrášlení masitých rosolů; když se totiž mezi zelené lístky růžové hromádky pokladou, pěkně to vyhlíží.</p>
+<p>Utři másla mnoho-li potřebuješ s&nbsp;tolika kapkami alkermesové šťávy, až je barvy krásně růžové. Toto máslo hodí se pouze k&nbsp;okrášlení masitých rosolů; když se totiž mezi zelené lístky růžové hromádky pokladou, pěkně to vyhlíží.</p>
 
 <a id="maslo-sardelove"><h2>Máslo sardelové</h2></a>
 
-<p>Omej sardelky v&nbsp;čisté studené vodě, mnoho-li jich potřebuješ, pak šupinky setři, odděl obě půlky od prostřední kůstky, načež sardelky na čistém prkénku nejdříve samotné, pak s&nbsp;čerstvým máslem rozetři. Kolik <a href="miry-a-vahy.html#lot" class="mav">lotů</a> je sardelek, tolik <a href="miry-a-vahy.html#lot" class="mav">lotů</a> musí býti másla, a&nbsp;rozetři to tak hladce, aby to bylo opět jako máslo; kousky sardelek nesmí v&nbsp;tom býti vidět. – Máslo sardelové potřebuje se k&nbsp;nesčíslným věcem, a&nbsp;když se na přípravu jeho práce nešetří, stane se ouhlednější i&nbsp;chutnější.</p>
+<p>Omej sardelky v&nbsp;čisté studené vodě, mnoho-li jich potřebuješ, pak šupinky setři, odděl obě půlky od prostřední kůstky, načež sardelky na čistém prkénku nejdříve samotné, pak s&nbsp;čerstvým máslem rozetři. Kolik <a href="miry-a-vahy.html#lot" class="mav">lotů</a> je sardelek, tolik <a href="miry-a-vahy.html#lot" class="mav">lotů</a> musí býti másla, a&nbsp;rozetři to tak hladce, aby to bylo opět jako máslo; kousky sardelek nesmí v&nbsp;tom býti vidět. Máslo sardelové potřebuje se k&nbsp;nesčíslným věcem, a&nbsp;když se na přípravu jeho práce nešetří, stane se ouhlednější i&nbsp;chutnější.</p>
 
 <a id="maslo-cokoladove"><h2>Máslo čokoládové</h2></a>
 
-<p>Utři čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvě tlučeného másla se třemi na tvrdo vařenými žloutky, načež k&nbsp;tomu připoj dvě malé tabulky ustrouhané čokolády a&nbsp;dobře to utři; kdo chce, může k&nbsp;tomu přidati trochu cukru a&nbsp;trochu tlučené vanilie. – Toto máslo se požívá buď k&nbsp;čerstvě pečeným žemličkám nebo na oplatky namazané.</p>
+<p>Utři čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvě tlučeného másla se třemi na tvrdo vařenými žloutky, načež k&nbsp;tomu připoj dvě malé tabulky ustrouhané čokolády a&nbsp;dobře to utři; kdo chce, může k&nbsp;tomu přidati trochu cukru a&nbsp;trochu tlučené vanilie. Toto máslo se požívá buď k&nbsp;čerstvě pečeným žemličkám nebo na oplatky namazané.</p>
 
 <p>Z másla žlutého, zeleného a&nbsp;černého mohou se dělati všelijaké věci, jako: košíčky, pyramidy atd. K&nbsp;okrašlování se zelené máslo dá do stříkánkové formy a&nbsp;protlačí se skrze řídké sejtko, uvnitř formy se nacházející, nebo se protlačí skrze cedník, anebo skrze stříkánkovou hvězdu <i>(Spritzfrapsenform)</i>. Zkušená kuchařka ostatně lehce pochopí, co se k&nbsp;čemu hodí, aby se to chutnější a&nbsp;ouhlednější stalo.</p>
 
