--- a/src/ledy-rozlicnych-barev.html
+++ b/src/ledy-rozlicnych-barev.html
@@ -50,7 +50,7 @@
 
 <p>Každý cukr k&nbsp;barvení musí se až k&nbsp;šestému stupni vařit, pak se nechá buď bílý, nebo se rozličně obarví.</p>
 
-<p>červeně se cukr barví karmínem, který se s&nbsp;několika kapkami citronové šťávy rozetře*</p>
+<p>červeně se cukr barví karmínem, který se s&nbsp;několika kapkami citronové šťávy rozetře.</p>
 
 <p>Žlutě se barví šafránem. Nalej na šafrán vařiči vody a&nbsp;nech to chvilenku stát; pak to proceď skrze čistý šat, naceď do toho trochu citronové šťávy, vlej to do cukru, dobře to promíchej a&nbsp;nech to ještě trochu povařit.</p>
 
