--- a/src/rybi-a-postni-polivky.html
+++ b/src/rybi-a-postni-polivky.html
@@ -92,7 +92,7 @@
 
 <a id="pivni-polivka-s-chlebem"><h2>Pivní polívka s&nbsp;chlebem</h2></a>
 
-<p>Rozkrájej chleba do hrnku, aby ho bylo něco přes polovic, pak na něj nalej studeného piva, přidej trochu kmínu, osol to a&nbsp;nech to vařit, až se chléb rozvaří; do jiného hrnku vraz 3 celé vejce, dej k&nbsp;nim 3 <a href="miry-a-vahy.html#lot" class="mav">loty</a> másla, 2 <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru a&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> husté kyselé smetany, dobře to rozmíchej, pak to Vlej do polívky, nech ji při ustavičném míchání ještě chvilenku povařit – a&nbsp;polívka jest hotová. Kdo ji chce míti přikyslou, může do ní přimíchat několik lžic vinního octa a&nbsp;přidat cukru. Takto se může tak* dělat polívka z&nbsp;vody místo z&nbsp;piva, jen že se místo kyselé smetany vezme sladká a&nbsp;cukr se vynechá; pak se jmenuje žebrácká polívka.</p>
+<p>Rozkrájej chleba do hrnku, aby ho bylo něco přes polovic, pak na něj nalej studeného piva, přidej trochu kmínu, osol to a&nbsp;nech to vařit, až se chléb rozvaří; do jiného hrnku vraz 3 celé vejce, dej k&nbsp;nim 3 <a href="miry-a-vahy.html#lot" class="mav">loty</a> másla, 2 <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru a&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> husté kyselé smetany, dobře to rozmíchej, pak to Vlej do polívky, nech ji při ustavičném míchání ještě chvilenku povařit – a&nbsp;polívka jest hotová. Kdo ji chce míti přikyslou, může do ní přimíchat několik lžic vinního octa a&nbsp;přidat cukru. Takto se může tak dělat polívka z&nbsp;vody místo z&nbsp;piva, jen že se místo kyselé smetany vezme sladká a&nbsp;cukr se vynechá; pak se jmenuje žebrácká polívka.</p>
 
 <a id="vinni-polivka"><h2>Vinní polívka</h2></a>
 
